--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
 
   <script src="index.js"></script>
   <script src="bonbon.js"></script>
+  <script src="tableaux.js"></script>
 </body>
 </html>
