--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MyJS</title>
-</head>
-<body>
-  
-
-  <script src="index.js"></script>
-  <script src="bonbon.js"></script>
-  <script src="tableaux.js"></script>
-  <script src="Objets.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>MyJS</title>
+  </head>
+  <body>
+    <script src="index.js"></script>
+    <script src="bonbon.js"></script>
+    <script src="tableaux.js"></script>
+    <script src="Objets.js"></script>
+    <script src="dom.js"></script>
+  </body>
 </html>
