--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MyJS</title>
+    <div id="recipe">
+      <h1>Macarons au chocolat 🍫</h1>
+      <div>
+        <button id="minus">-</button>
+        <span id="peopleCount">2 personnes</span>
+        <button id="plus">+</button>
+      </div>
+      <h2>Ingrédients</h2>
+      <ul id="ingredients"></ul>
+      <h2>Instructions</h2>
+      <ol id="instructions"></ol>
+    </div>
   </head>
   <body>
     <script src="index.js"></script>
