Création de mot de passe

--- a/form.html
+++ b/form.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MyJS</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <h1>🔒</h1>
@@ -20,10 +20,6 @@
       <li class="ok">Les mots de passe doivent être identiques</li>
     </ul>
 
-    <script src="index.js"></script>
-    <script src="bonbon.js"></script>
-    <script src="tableaux.js"></script>
-    <script src="Objets.js"></script>
-    <script src="dom.js"></script>
+    <script src="form.js"></script>
   </body>
 </html>
