--- a/colorGen.html
+++ b/colorGen.html
@@ -15,7 +15,7 @@
         border-radius: 2px;
       }
       .task {
-        display: inline-block;
+        width: 150px;
         background: #333;
         color: white;
         padding: 10px;
